Got rid of coloring disabled input text. Mobile Safari has an issue where `-webkit-text-fill-color` will supercede `color`, and somehow that made the text color much too light. Rather than writing a bunch of styles overwriting solely for Mobile Safari, I ditched coloring the disabled inputs all together and let the color be default.

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -18,7 +18,6 @@
  * value, rather than change three values in RGB. Changing hues is easier too.
  */
 $cell-border-color: hsl(0, 0, 85%);
-$prefilled-digit-color: hsl(0, 0, 50%);
 $invalid-digit-color: hsl(0, 75%, 50%);
 
 body {
@@ -125,11 +124,6 @@ input[type=number]::-webkit-outer-spin-button {
 			border: none;
 			background: none;
 			text-align: center;
-			font-size: 2.5em;
-
-			&:disabled {
-				color: $prefilled-digit-color;
-			}
 
 			&.invalid {
 				color: $invalid-digit-color;
